--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,9 +7,10 @@
 </head>
 <body>
     <header>
-        <h1>
-            To Do
-        </h1>
+        <div>
+            <h1>To Do</h1>
+            <img src="/imagens/moon-icon.png" alt="troca o tema">
+        </div>
     </header>
 
     {{{body}}}
