--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,8 +9,12 @@
     <header>
         <div>
             <h1>To Do</h1>
-            <img src="/imagens/moon-icon.png" alt="troca o tema">
+            <img src="/imagens/moon-icon.png" alt="icone da lua">
         </div>
+        <form action="">
+            <input type="text" id="nova-tarefa" placeholder="Criar uma nova tarefa" name="novaTarefa">
+            <button type="submit">Criar</button>
+        </form>
     </header>
 
     {{{body}}}
