--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,13 @@
-<h2>
-    home
-</h2>
+<main>
+    <section class="tarefas">
+        <div class="tarefa">
+            <form action="">
+                <input type="radio" id="">
+                <label for="tarefa-1">Completar curso de JavaScript</label>
+                <button>
+                    <img src="/imagens/x-icon.png" alt="icone de x">
+                </button>
+            </form>
+        </div>
+    </section>
+</main>
