criação das variavéis do tema dark

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>ToDo APP</title>
 </head>
-<body>
+<body class="dark">
     <header>
         <div>
             <div>
