--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,12 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>ToDo APP</title>
 </head>
-<body class="dark">
+<body>
     <header>
         <div>
             <div>
                 <h1>To Do</h1>
-                <img src="/imagens/moon-icon.png" alt="icone da lua">
+                <button class="tema-button" onclick="alterarTema()">
+                    <img src="/imagens/moon-icon.png" alt="icone da lua">
+                </button>
             </div>
             <form action="">
                 <input type="text" id="nova-tarefa" placeholder="Criar uma nova tarefa" name="novaTarefa">
@@ -24,5 +26,7 @@
     </header>
 
     {{{body}}}
+
+    <script src="/js/script.js"></script>
 </body>
 </html>
