--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -16,7 +16,7 @@
                 </div>
 
                 {{/if}}
-                <button>
+                <button onclick="excluirTarefa({{this.id}})">
                     <img src="/imagens/x-icon.png" alt="icone de x">
                 </button>
             </form>
