--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,15 +28,15 @@
 body.dark {
     --bg-header-mobile: url(../imagens/bg-header-mobile-dark.png);
     --bg-header-desktop: url(../imagens/bg-header-desktop-dark.png);
-    --input-box-shadow: rgba(0, 0, 0, 0.50);;
+    --input-box-shadow: rgba(0, 0, 0, 0.50);
     --input-color: #C8CBE7;
     --input-bg: #25273D;
     --placeholder-color: #767992;
     --button-color: #25273D;
     --button-color-hover: #5B5E7E;
-    --bg-body: #171823;;
+    --bg-body: #171823;
     --bg-tarefas: #25273D;
-    --box-shadow: 0px 35px 50px -15px rgba(0, 0, 0, 0.50);;
+    --box-shadow: 0px 35px 50px -15px rgba(0, 0, 0, 0.50);
     --border-color: #393A4B;
     --text-color: #C8CBE7;
     --todo-complete-color: #4D5067;
@@ -55,6 +55,7 @@ header {
     background-size: cover;
     background-position: center;
     height: 12.5rem;
+    
     padding: 3rem 1.75rem;
 }
 
@@ -239,7 +240,7 @@ main {
         display: flex;
         padding: 0;
         margin: 0;
-        gap: 2
+        gap: 2;
     }
 
     .informacoes {
